--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 
     //androidUtilCode
     api "com.blankj:utilcodex:$rootProject.androidUtilCodeVersion"
+    //gson
+    api "com.google.code.gson:gson:$rootProject.gsonVersion"
 }
 
 
