--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 29
@@ -22,27 +22,14 @@ android {
         }
     }
 
-    //junit相关
-    testOptions {
-        unitTests {
-            includeAndroidResources = true
-            unitTests.returnDefaultValues = true
-        }
-    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-    //androidUtilCode
-    api "com.blankj:utilcodex:$rootProject.androidUtilCodeVersion"
-    //gson
-    api "com.google.code.gson:gson:$rootProject.gsonVersion"
+    implementation project(path: ':common')
 }
-
-
