--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,6 +29,10 @@ android {
             unitTests.returnDefaultValues = true
         }
     }
+
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
@@ -39,10 +43,25 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    api "androidx.recyclerview:recyclerview:$rootProject.recyclerViewVersion"
+    api "androidx.constraintlayout:constraintlayout:$rootProject.constraintLayoutVersion"
+
     //androidUtilCode
     api "com.blankj:utilcodex:$rootProject.androidUtilCodeVersion"
     //gson
     api "com.google.code.gson:gson:$rootProject.gsonVersion"
+
+    // Room components
+    api "androidx.room:room-runtime:$rootProject.roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+
+    // Lifecycle components
+    api "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
+
+    // UI
+    api "com.google.android.material:material:$rootProject.materialVersion"
 }
 
 
