--- a/config.gradle
+++ b/config.gradle
@@ -1,4 +1,10 @@
 ext{
     androidUtilCodeVersion = "1.25.9"
     gsonVersion = "2.8.6"
+    roomVersion = '2.2.0'
+    archLifecycleVersion = '2.2.0-beta01'
+    coreTestingVersion = '2.1.0'
+    materialVersion = '1.0.0'
+    recyclerViewVersion = '1.0.0'
+    constraintLayoutVersion = '1.1.3'
 }
