--- a/common/build.gradle
+++ b/common/build.gradle
@@ -62,6 +62,10 @@ dependencies {
 
     // UI
     api "com.google.android.material:material:$rootProject.materialVersion"
+
+    //rxJava
+    api "io.reactivex.rxjava2:rxjava:$rootProject.RxJavaVersion"
+    api "io.reactivex.rxjava2:rxandroid:$rootProject.RxAndroidVersion"
 }
 
 
