--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,6 +33,12 @@ android {
     dataBinding {
         enabled true
     }
+
+    //lambda
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
