--- a/test/build.gradle
+++ b/test/build.gradle
@@ -25,6 +25,12 @@ android {
     dataBinding {
         enabled true
     }
+
+    //lambda
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
