--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.yu.hu.traveling">
 
     <application
+        android:name="com.yu.hu.common.application.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
