feat(SplashActivity):1.complete SplashActivity logic.  2.add viewModelProvider in BaseActivity.

--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yu.hu.common">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--  网络请求  -->
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
